# paper-learning-hub

./: .gitattributes  .gitignore  README.md  batch_translate.py  config.yaml  pyproject.toml  run_daily.sh
.github/workflows/: deploy.yml
.workbuddy/: daily-task.md
.workbuddy/extracted/: 2604.11623v3.json  2604.11623v3_text.txt  2604.11753v1.json  2604.11753v1_text.txt  2604.12076v1.json  2604.12076v1_text.txt  2604.12102v2.json  2604.12102v2_text.txt  2604.12301v1.json  2604.12301v1_text.txt  2604.13414v1.json  2604.13414v1_text.txt  2604.14687v1.json  2604.14687v1_text.txt  2604.14858v1.json  2604.14858v1_text.txt  2604.15725v1.json  2604.15725v1_text.txt  2604.16911v1.json  2604.16911v1_text.txt  2604.17111v1.json  2604.17111v1_text.txt  2604.17194v1.json  2604.17194v1_text.txt  2604.18038v1.json  2604.18038v1_text.txt  2604.18234v1.json  2604.18234v1_text.txt  2604.18356v1.json  2604.18356v1_text.txt  2604.18364v1.json  2604.18364v1_text.txt  2604.18429v1.json  2604.18429v1_text.txt  2604.18584v1.json  2604.18584v1_text.txt  2604.18658v1.json  2604.18658v1_text.txt  2604.19144v1.json  2604.19144v1_text.txt  (+38 more)
.workbuddy/memory/: 2026-05-04.md  MEMORY.md
.workbuddy/results/: 2604.11623v3.json  2604.11753v1.json  2604.12076v1.json  2604.12102v2.json  2604.12301v1.json  2604.13414v1.json  2604.14687v1.json  2604.14858v1.json  (+31 more)
guides/: daily-guide.md
scripts/: install_workbuddy_skill.py  run_daily.py
site/: mkdocs.yml
tests/: conftest.py  test_database.py  test_discovery.py  test_git_ops.py  test_site_builder.py  test_translator.py  test_workbuddy.py
(+265 files in other folders)
